# moon-buggy-2d

./: .clang-format  .gitattributes  .gitignore  .gut_editor_config.json  .gutconfig.json  CMakeLists.txt  LICENSE  Moon Buggy 2D.csproj  Moon Buggy 2D.sln  README.md  conanfile.py  conanfile.txt  default_env.tres  export_presets.cfg  project.godot  scripts.gdextension
.conan/profiles/: mingw
.github/workflows/: ci.yml
addons/gut/: source_code_pro.fnt
assets/backgrounds/: space_blue.png.import  space_purple.png.import  stars_blue.png.import  stars_purple.png.import
assets/fonts/: monogram.ttf.import
assets/images/backgrounds/: space_blue.png.import  space_purple.png.import  stars_blue.png.import  stars_purple.png.import
assets/images/icons/: icon.png.import
assets/images/sprites/: earth_large.png.import  earth_small.png.import  moon_base_back.png.import  moon_base_front.png.import
assets/sheets/: astronaut.png.import  blue_meteor.png.import  blue_moon_tiles.png.import  buggy_idle.png.import  buggy_jump_air.png.import  buggy_jump_land.png.import  buggy_jump_start.png.import  buggy_move.png.import  flag.png.import  meteor_flying.png.import  meteor_impact_back.png.import  meteor_impact_front.png.import  purple_meteor.png.import  purple_moon_tiles.png.import
assets/sprites/: earth_large.png.import  earth_small.png.import  moon_base_back.png.import  moon_base_front.png.import
assets/themes/: default.tres
cmake/Toolchains/: x86_64-w64-mingw32.cmake
extensions/: EnumExtensions.cs
godot/: .gutconfig.json  Game.tscn  export_presets.cfg  project.godot
godot/addons/gut/: test.gd
godot/assets/backgrounds/: space_blue.png.import  space_blue_stars.png.import  space_purple.png.import  starfield2.png.import  stars_blue.png.import  stars_purple.png.import
godot/assets/fonts/: button_font.tres  hud_font.tres
godot/assets/frames/: buggy_animations.tres  buggy_idle.png.import  buggy_jump_air.png.import  buggy_jump_land.png.import  buggy_jump_start.png.import  buggy_move.png.import  meteor_animations.tres
godot/assets/sprites/: astronaut.png.import  buggy.png.import  buggy_idle.png.import  buggy_jump_air.png.import  buggy_jump_land.png.import  buggy_jump_start.png.import  buggy_move.png.import  earth_large.png.import  earth_small.png.import  fireworks.png.import  meteor_blue_01.png.import  meteor_blue_02.png.import  meteor_blue_03.png.import  meteor_blue_04.png.import  meteor_flying.png.import  meteor_impact_back.png.import  meteor_impact_front.png.import  meteor_purple_01.png.import  meteor_purple_02.png.import  meteor_purple_03.png.import  meteor_purple_04.png.import  moon_base_back.png.import  moon_base_flag_01.png.import  moon_base_flag_02.png.import  moon_base_flag_03.png.import  moon_base_front.png.import  moon_buggy_shadow.png.import
godot/assets/tiles/: ground_tiles.png.import  ground_tiles.tres  moon_tiles.tres  moon_tiles_blue.png.import  moon_tiles_grey.png.import  moon_tiles_set.tres
godot/config/: levels.json
godot/scenes/: Background.tscn  Buggy.tscn  Game.tscn  GameBoundary.tscn  HUD.tscn  KillZone.tscn  LevelComplete.tscn  MainMenu.tscn  Map.tscn  MoonBuggy2D.tscn  ScrollCamera.tscn
godot/scenes/core/: Meteor.tscn  MeteorSpawner.tscn  Space.tscn
godot/scenes/game/: Background.tscn  Buggy.tscn  Explosion.tscn  Fireworks.tscn  GameBoundary.tscn  KillZone.tscn  Map.tscn  Meteor.tscn  Meteors.tscn  ScrollCamera.tscn
godot/scenes/gui/: BuggyCrashed.tscn  HUD.tscn  LevelComplete.tscn  MainMenu.tscn
godot/scripts/: Buggy.gdns  Game.gdns  HUD.gdns  LevelComplete.gdns  LevelGenerator.gdns  MainMenu.gdns  Map.gdns  MoonBuggy2D.gdns  ScrollCamera.gdns  scripts.gdnlib
godot/scripts/core/: Level.gdns  LevelDescriptor.gdns  MeteorSpawner.gdns  Space.gdns
godot/scripts/game/: Buggy.gdns  LevelGenerator.gdns  Meteor.gdns  Meteors.gdns  ScrollCamera.gdns
godot/scripts/gui/: BuggyCrashed.gdns  GUI.gdns  LevelComplete.gdns  MainMenu.gdns
godot/test/: tests.tscn
godot/test/resources/: invalid_levels  levels_with_invalid  single_level  three_levels
godot/test/unit/: test_hud.gd  test_level_generator.gd  test_main_menu.gd  test_map.gd
include/: ArrayIterator.hpp  Buggy.hpp  Game.hpp  GameBoundary.hpp  HUD.hpp  Level.hpp  LevelComplete.hpp  LevelDescriptor.hpp  LevelGenerator.hpp  MainMenu.hpp  Map.hpp  MoonBuggy2D.hpp  ReferenceDeleter.hpp  ScrollCamera.hpp  TypedNodeCastMixin.hpp
include/core/: Constants.hpp  Fwd.hpp  Level.hpp  Meteor.hpp  MeteorSpawner.hpp  ScrollCamera.hpp  Space.hpp  Theming.hpp
include/game/: Buggy.hpp  Fwd.hpp  Game.hpp  GameMachine.hpp  LevelGenerator.hpp  Map.hpp  Meteor.hpp  Meteors.hpp  ScrollCamera.hpp
include/gui/: BuggyCrashed.hpp  Fwd.hpp  GUI.hpp  HUD.hpp  LevelComplete.hpp  MainMenu.hpp  Signals.hpp
include/support/: ArrayIterator.hpp  ObjectPointer.hpp  SilentGodotClass.hpp  TypedNodeCastMixin.hpp
scenes/: Background.tscn  Buggy.tscn  Main.tscn  MeteorSpawner.tscn  Meteorite.tscn
scenes/Actors/: Astronaut.tscn  Buggy.tscn  Meteor.tscn  Meteorite.tscn
scenes/Menus/: MainMenu.tscn
scenes/UI/: Background.tscn
scripts/: .gitignore  Background.cs  Buggy.cs  CMakeLists.txt  ColorTheme.cs  Main.cs  Main.hpp  MeteorSpawner.hpp  Meteorite.cs  scripts.cpp
scripts/Actors/: Buggy.cs  Buggy.hpp  Meteor.hpp  Meteorite.cs  Meteorite.hpp
scripts/Extensions/: EnumExtensions.cs
scripts/Helpers/: ArrayHelpers.hpp  DontWarn.hpp  PropertiesGetSet.hpp
scripts/Menus/: MainMenu.hpp
scripts/UI/: Background.cs  Background.hpp  Color.hpp
source/: Buggy.cpp  Game.cpp  GameBoundary.cpp  HUD.cpp  Level.cpp  LevelComplete.cpp  LevelDescriptor.cpp  LevelGenerator.cpp  MainMenu.cpp  Map.cpp  MoonBuggy2D.cpp  ScrollCamera.cpp  scripts.cpp
source/core/: Level.cpp  LevelDescriptor.cpp  Meteor.cpp  MeteorSpawner.cpp  ScrollCamera.cpp  Space.cpp  Theming.cpp
source/game/: Buggy.cpp  Game.cpp  Game_private.cpp  LevelGenerator.cpp  Map.cpp  Meteor.cpp  Meteor_private.cpp  Meteors.cpp  ScrollCamera.cpp
source/gui/: BuggyCrashed.cpp  GUI.cpp  HUD.cpp  LevelComplete.cpp  MainMenu.cpp
tests/unit/Menus/: MainMenuTests.gd
(+16 files in other folders)
